--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@ const postcodes = {
 "DN60QA": "Result for DN6 0QA",
 "EH101AA": "Result for EH10 1AA",
 "LS11AA": "Result for LS1 1AA"
+"DN4000": "WOW for LS1 1AA"
 };
 
 function check(){
