--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@ const postcodes = {
 "DN60QA": "Delivery available in DN6 0QA",
 "EH101AA": "No delivery in EH10 1AA",
 "LS11AA": "Service available in LS1 1AA"
+"DN4000": "Service available in LS1 1AA"
 // Add your 2000+ postcodes here
 };
 
