--- a/test.html
+++ b/test.html
@@ -1,51 +1,47 @@
-<!-- Begin Postcode Lookup Widget -->
 <div id="postcode-widget"></div>
 
 <script>
 (function(){
-// Your postcode list
 const postcodes = {
 "DN60QA": "Delivery available in DN6 0QA",
 "EH101AA": "No delivery in EH10 1AA",
 "LS11AA": "Service available in LS1 1AA",
-"DN4000": "Service available in LS1 1AA"
-// Add your 2000+ postcodes here
+"DN4000": "Service available in DN4 000"
 };
 
-// Create the elements dynamically
-const container = document.getElementById('postcode-widget');
-const input = document.createElement('input');
-input.placeholder = 'Enter postcode';
-input.id = 'postcode-input';
-const button = document.createElement('button');
-button.innerText = 'Check';
-const result = document.createElement('div');
-result.id = 'postcode-result';
-result.style.marginTop = '10px';
-result.style.fontWeight = 'bold';
+const box = document.getElementById("postcode-widget");
 
-container.appendChild(input);
-container.appendChild(button);
-container.appendChild(result);
+const input = document.createElement("input");
+input.placeholder = "Enter postcode";
 
-// Normalize input
-function normalize(str) {
-return str.replace(/\s+/g,'').toUpperCase();
+const button = document.createElement("button");
+button.type = "button"; // stops page refresh
+button.textContent = "Check";
+
+const result = document.createElement("div");
+result.style.marginTop = "10px";
+result.style.fontWeight = "bold";
+
+box.appendChild(input);
+box.appendChild(button);
+box.appendChild(result);
+
+function normalize(v){
+return v.replace(/\s+/g,"").toUpperCase();
 }
 
-function checkPostcode() {
+function check(){
 const key = normalize(input.value);
 if(postcodes[key]){
-result.innerHTML = `<span style="color:green">${postcodes[key]}</span>`;
+result.textContent = postcodes[key];
 } else {
-result.innerHTML = `<span style="color:red">Postcode not found: ${key}</span>`;
+result.textContent = "Postcode not found: " + key;
 }
 }
 
-button.addEventListener('click', checkPostcode);
-input.addEventListener('keypress', function(e){
-if(e.key === 'Enter') checkPostcode();
+button.addEventListener("click", check);
+input.addEventListener("keypress", function(e){
+if(e.key === "Enter") check();
 });
 })();
 </script>
-<!-- End Postcode Lookup Widget -->
