--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -276,7 +276,7 @@ total -= (parseInt(document.getElementById('patio').value)||0) * 20;
 total = Math.max(total,0);
 
 document.getElementById('result').innerHTML =
-`Estimated Exterior Painting Cost:<br>£${total.toFixed(2)}`;
+`Estimated Exterior Painting Cost: All inclusive<br>£${total.toFixed(2)}`;
 
 document.getElementById('cta').style.display = 'block';
 }
