--- a/quotes/fence-gate-painting.html
+++ b/quotes/fence-gate-painting.html
@@ -6,7 +6,7 @@
 
 <title>Metal Fence & Gate Painting Quote | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/fence-gate-painting.html">
+<link rel="canonical" href="https://homerepairs4u.com/rail-painting.html">
 <meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and nearby areas. Enter your fence and gate sizes in centimetres for a realistic guide price.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
