--- a/quotes/rail-painting.html
+++ b/quotes/rail-painting.html
@@ -7,7 +7,7 @@
 <title>Metal Fence & Gate Painting Quote | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs.com/rail-painting.html">
-<meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and nearby areas. Enter your fence and gate sizes in centimetres for a realistic guide price.">
+<meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and within 6 miles. Enter your fence and gate sizes in centimetres for a realistic guide price.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
 
@@ -153,7 +153,7 @@ text-decoration:none;
 
 <h2>Fence & Gate Painting Quote Calculator</h2>
 
-<p>Use the calculator below to get a guide price for painting your metal fence and/or gate in Askern and nearby areas within 6 miles.</p>
+<p>Use the calculator below to get a guide price for painting your metal fence and/or gate in Askern and within roughly six miles of the area.</p>
 
 <p>Measure the total length and height of your fence and gate in <strong>centimetres</strong>. If you don’t have a fence or gate, just enter <strong>0</strong>.</p>
 
@@ -184,6 +184,26 @@ Enter measurements to calculate your quote.
 <p>If this sounds like a realistic price for you, give us a ring!</p>
 <a href="tel:07735873694">📞 Call Now: 07735 873694</a>
 </div>
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>How long does metal fence and gate paint last?</h3>
+<p>When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference.</p>
+
+<h3>Do you remove rust before painting?</h3>
+<p>Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning.</p>
+
+<h3>What type of paint do you use?</h3>
+<p>We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions.</p>
+
+<h3>Is the calculator price final?</h3>
+<p>The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job.</p>
+
+<h3>What areas do you cover?</h3>
+<p>We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties.</p>
+
+<h3>Do you offer free quotes?</h3>
+<p>Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call.</p>
 
 </main>
 
@@ -221,6 +241,64 @@ document.getElementById('result').innerHTML =
 <small>Total area: ${totalArea.toFixed(2)} m² at £24 per m²</small>`;
 
 document.getElementById('cta').style.display = 'block';
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "How long does metal fence and gate paint last?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference."
+}
+},
+{
+"@type": "Question",
+"name": "Do you remove rust before painting?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning."
+}
+},
+{
+"@type": "Question",
+"name": "What type of paint do you use?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions."
+}
+},
+{
+"@type": "Question",
+"name": "Is the calculator price final?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job."
+}
+},
+{
+"@type": "Question",
+"name": "What areas do you cover?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer free quotes?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call."
+}
+}
+]
 }
 </script>
 
