--- a/quotes/rail-painting.html
+++ b/quotes/rail-painting.html
@@ -6,7 +6,7 @@
 
 <title>Metal Fence & Gate Painting Quote | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs.com/rail-painting.html">
+<link rel="canonical" href="https://homerepairs.com/quotes/rail-painting.html">
 <meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and within 6 miles. Enter your fence and gate sizes in centimetres for a realistic guide price.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
