--- a/quotes/house-painting.html
+++ b/quotes/house-painting.html
@@ -6,7 +6,7 @@
 
 <title>Exterior House Painting Quote Calculator | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/house-painting.html">
+<link rel="canonical" href="https://homerepairs4u.com/quotes/house-painting.html">
 <meta name="description" content="Instant exterior house painting quote calculator for Askern DN6 and a 6-mile radius. Measure front, back and side walls to estimate a full exterior house paint.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
