--- a/quotes/fence-quote.html
+++ b/quotes/fence-quote.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ADD TITLE</title>
+
+<title>Metal Fence & Gate Painting Quote | Askern DN6</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/fence-quote.html">
-<meta name="description" content="ADD META">
+<link rel="canonical" href="https://homerepairs.com/rail-painting.html">
+<meta name="description" content="Get an instant quote for metal fence and gate painting in Askern DN6 and within 6 miles. Enter your fence and gate sizes in centimetres for a realistic guide price.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
+
 <style>
-/* HEADER STYLING */
+/* HEADER */
 header{
 text-align:center;
 padding:25px 10px;
 background:#fff;
-border-bottom:4px solid #27ae60;
+border-bottom:4px solid #000;
 }
-
-.logo{
-max-height:90px;
-width:auto;
-}
-
-/* CALL BUTTON */
+.logo{max-height:90px;width:auto;}
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -39,8 +33,73 @@ border-radius:6px;
 border:2px solid #000;
 }
 .call-btn:hover{
-background:#333;
+background:#fff;
+color:#000;
+}
+
+/* MAIN */
+main{
+max-width:950px;
+margin:40px auto;
+padding:0 15px;
+font-family:Arial,sans-serif;
+line-height:1.6;
+color:#000;
+}
+h1,h2,h3{color:#000;}
+label{
+display:block;
+margin-top:12px;
+font-weight:bold;
+}
+input{
+width:100%;
+padding:10px;
+margin-top:5px;
+font-size:16px;
+border:2px solid #000;
+}
+button{
+margin-top:20px;
+padding:14px 30px;
+font-size:18px;
+background:#000;
 color:#fff;
+border:2px solid #000;
+border-radius:6px;
+cursor:pointer;
+}
+button:hover{
+background:#fff;
+color:#000;
+}
+.result{
+margin-top:25px;
+padding:20px;
+background:#f4f4f4;
+border-radius:6px;
+font-size:18px;
+font-weight:bold;
+}
+.cta{
+margin-top:15px;
+text-align:center;
+}
+.cta a{
+font-size:20px;
+padding:14px 30px;
+background:#000;
+color:#fff;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+display:inline-block;
+margin-top:10px;
+}
+.cta a:hover{
+background:#fff;
+color:#000;
 }
 
 /* FOOTER */
@@ -52,44 +111,104 @@ padding:25px 15px;
 margin-top:40px;
 font-size:14px;
 }
-
 .footer-services{
-background-color: black;
-padding: 20px;
-text-align: center;
-margin-top: 15px;
+background:black;
+padding:20px;
+margin-top:15px;
 }
-
 .footer-services a{
-color: white;
-margin: 0 10px;
+color:white;
+margin:0 10px;
+text-decoration:none;
 }
 </style>
+</head>
 
+<body>
 
-<!-- ✅ HEADER -->
 <header>
-<img src="/images/logo.webp"
-alt="Home Repairs 4U logo"
-class="logo"
-width="600" height="200"
-loading="eager">
-
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/"
-style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
+<div style="margin-top:10px;">
+<a href="https://steely1968.github.io/" style="font-size:20px;color:#000;text-decoration:none;font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
+<main>
 
-<!-- ✅ FOOTER -->
+<h1>Metal Fence & Gate Painting in Askern DN6</h1>
+
+<p>Fresh paint on your metal fence or gate not only improves how your home looks, it also protects the metal from rust, weather damage, and long-term wear. Our professional metal painting service in Askern DN6 gives your fence or gate a clean, smart finish that lasts.</p>
+
+<p>We work on all types of metal fencing and gates including wrought iron, steel, tubular fencing, security fencing, and decorative railings. Whether it’s a small garden gate or a full boundary fence, we prepare, prime, and paint it properly for a durable result.</p>
+
+<p>This page includes a simple calculator to give you an instant guide price. It’s designed to be easy to use and realistic, so you know roughly what to expect before calling us.</p>
+
+<h2>How Our Fence & Gate Painting Works</h2>
+
+<p>Every job starts with proper preparation. We remove loose paint, rust, and dirt, then treat the metal before applying high-quality metal paint designed to resist rust and fading.</p>
+
+<p>Good preparation is the key to a long-lasting finish. Rushing this stage is why many paint jobs fail early – we don’t cut corners.</p>
+
+<h2>Fence & Gate Painting Quote Calculator</h2>
+
+<p>Use the calculator below to get a guide price for painting your metal fence and/or gate in Askern and within roughly six miles of the area.</p>
+
+<p>Measure the total length and height of your fence and gate in <strong>centimetres</strong>. If you don’t have a fence or gate, just enter <strong>0</strong>.</p>
+
+<p><em>This is a guide price. Very rusty metal, awkward access, or special finishes may slightly affect the final quote.</em></p>
+
+<h2>Fence Measurements (centimetres)</h2>
+<label for="fenceLength">Fence length (cm)</label>
+<input type="number" id="fenceLength" min="0">
+
+<label for="fenceHeight">Fence height (cm)</label>
+<input type="number" id="fenceHeight" min="0">
+
+<h2>Gate Measurements (centimetres)</h2>
+<label for="gateLength">Gate width (cm)</label>
+<input type="number" id="gateLength" min="0">
+
+<label for="gateHeight">Gate height (cm)</label>
+<input type="number" id="gateHeight" min="0">
+
+<button type="button" onclick="calculate()">Calculate Quote</button>
+
+<div class="result" id="result">
+Enter measurements to calculate your quote.
+</div>
+
+<div id="cta" class="cta" style="display:none;">
+<h3>Your Estimated Price</h3>
+<p>If this sounds like a realistic price for you, give us a ring!</p>
+<a href="tel:07735873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>How long does metal fence and gate paint last?</h3>
+<p>When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference.</p>
+
+<h3>Do you remove rust before painting?</h3>
+<p>Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning.</p>
+
+<h3>What type of paint do you use?</h3>
+<p>We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions.</p>
+
+<h3>Is the calculator price final?</h3>
+<p>The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job.</p>
+
+<h3>What areas do you cover?</h3>
+<p>We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties.</p>
+
+<h3>Do you offer free quotes?</h3>
+<p>Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call.</p>
+
+</main>
+
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
-
 <div class="footer-services">
 <p style="color: white;">Our Services:</p>
 <a href="/services/Exterior-decorating.html">Exterior Decorating</a>
@@ -99,3 +218,89 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="/services/upvc-restoration.html">uPVC Restoration</a>
 </div>
 </footer>
+
+<script>
+function calculate(){
+const fenceLength = parseFloat(document.getElementById('fenceLength').value)||0;
+const fenceHeight = parseFloat(document.getElementById('fenceHeight').value)||0;
+const gateLength = parseFloat(document.getElementById('gateLength').value)||0;
+const gateHeight = parseFloat(document.getElementById('gateHeight').value)||0;
+
+// Convert cm to metres
+const fenceArea = (fenceLength/100) * (fenceHeight/100);
+const gateArea = (gateLength/100) * (gateHeight/100);
+
+const totalArea = fenceArea + gateArea;
+const ratePerSqM = 24;
+let total = totalArea * ratePerSqM;
+
+total = Math.max(total,0);
+
+document.getElementById('result').innerHTML =
+`Estimated Fence & Gate Painting Cost:<br>£${total.toFixed(2)}<br>
+<small>Total area: ${totalArea.toFixed(2)} m² at £24 per m²</small>`;
+
+document.getElementById('cta').style.display = 'block';
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "How long does metal fence and gate paint last?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "When metal is properly cleaned, treated, primed, and painted, the finish can last for many years. Exposure to weather, sun, and moisture affects lifespan, but good preparation makes a huge difference."
+}
+},
+{
+"@type": "Question",
+"name": "Do you remove rust before painting?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Loose rust and flaking paint are removed first. The metal is then treated before painting so the new coating sticks properly and helps prevent rust returning."
+}
+},
+{
+"@type": "Question",
+"name": "What type of paint do you use?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We use quality metal paints designed for outdoor use. These are made to resist rust, fading, and peeling in British weather conditions."
+}
+},
+{
+"@type": "Question",
+"name": "Is the calculator price final?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "The calculator gives a realistic guide price. Very heavy rust, difficult access, unusual shapes, or special finishes may slightly change the final quote after we see the job."
+}
+},
+{
+"@type": "Question",
+"name": "What areas do you cover?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We are based in Askern DN6 and cover roughly a six mile radius around the area, focusing on local homes and properties."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer free quotes?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. All quotes are free and come with no obligation. The calculator helps you get an idea before you call."
+}
+}
+]
+}
+</script>
+
+</body>
+</html>
